--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_DB=mongodb+srv://poomrapee:7442777H@cluster0.txbwjmh.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://poomrapee:7442777H@cluster0.txbwjmh.mongodb.net/?retryWrites=true&w=majority
 
